compiler/testData/diagnostics/tests/UnderscoreUsageInVariableAsFunctionCall.kt
// FIR_IDENTICAL
object Host {
    konst `____` = { -> }
    fun testFunTypeVal() {
        <!UNDERSCORE_USAGE_WITHOUT_BACKTICKS!>____<!>()
    }
}
